# sonarqube-miner

./: pyproject.toml  request.http
.github/workflows/: get-data.yaml
projects/: project-links1.txt  project-links2.txt  project-links3.txt  project-links4.txt  project-links5.txt  project-links6.txt  project-links7.txt  project-links8.txt  project-links9.txt
scripts/: config_example.json  get_project_info_by_languages.py
sonar_src/: sonar_project.py
