[tool.poetry]
name = "sonarqube-miner"
version = "0.1.0"
description = ""
authors = ["Jorge Yero Salazar <jyero96@gmail.com>"]
readme = "README.md"
packages = [{include = "sonarqube_miner"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
